- add fixed navbar with 'Home, Members, The team and contact' - add avatar/icon login on mobile in navbar - detach aside menu navigation to navbar - design aside login

--- a/css/main.css
+++ b/css/main.css
@@ -7807,9 +7807,8 @@ body main {
     background-color: white; }
 
 #header {
-  background: url("/assets/bck-ground-two.webp");
-  background-size: cover;
-  height: 35vh; }
+  background: url("../assets/bck-ground-two.png");
+  background-size: cover; }
 
 #boards hr {
   background: linear-gradient(90deg, #b06ab3 0%, #4668dc 100%);
